Moved peripheral library files.

--- a/software/stm32f4/AusBubble/Debug/makefile
+++ b/software/stm32f4/AusBubble/Debug/makefile
@@ -9,12 +9,12 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include src/system/subdir.mk
+-include src/lib/subdir.mk
 -include src/subdir.mk
 -include lib/STM32F4xx_StdPeriph_Driver/src/subdir.mk
 -include lib/FreeRTOS/Source/portable/MemMang/subdir.mk
 -include lib/FreeRTOS/Source/portable/GCC/ARM_CM4F/subdir.mk
 -include lib/FreeRTOS/Source/subdir.mk
--include lib/subdir.mk
 -include subdir.mk
 -include objects.mk
 
