--- a/software/stm32f4/AusBubble/Debug/makefile
+++ b/software/stm32f4/AusBubble/Debug/makefile
@@ -8,9 +8,13 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include src/usb/subdir.mk
 -include src/system/subdir.mk
 -include src/drivers/subdir.mk
 -include src/subdir.mk
+-include lib/STM32_USB_OTG_Driver/src/subdir.mk
+-include lib/STM32_USB_Device_Library/Core/src/subdir.mk
+-include lib/STM32_USB_Device_Library/Class/cdc/src/subdir.mk
 -include lib/STM32F4xx_StdPeriph_Driver/src/subdir.mk
 -include lib/FreeRTOS/Source/portable/MemMang/subdir.mk
 -include lib/FreeRTOS/Source/portable/GCC/ARM_CM4F/subdir.mk
